force-app/main/default/objects/SPEN_PostCodeMDM__c/SPEN_PostCodeMDM__c.object-meta.xml
<CustomObject>
    <description>CRMD-5815 : Object to store post codes and associated local authorities and LSOAs</description>
    <label>Post Code MDM</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Code MDM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>