force-app/main/default/objects/SPEN_PostCodeMDM__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <description>CRMD - 9191</description>
    <label>SPEN District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>