force-app/main/default/objects/SPEN_PostCodeMDM__c/fields/SPEN_LocalAuthority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocalAuthority__c</fullName>
    <description>CRMD-5815 : Stores Local Authority Code related to the post code</description>
    <inlineHelpText>Please enter the code</inlineHelpText>
    <label>Local Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_LocalAuthority</valueSetName>
    </valueSet>
</CustomField>