force-app/main/default/objects/SPEN_PostCodeMDM__c/fields/SPEN_LocalAuthorityCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocalAuthorityCode__c</fullName>
    <description>Field is not being used anymore a new picklist field is created to serve the business process</description>
    <inlineHelpText>Please enter the code</inlineHelpText>
    <label>Local Authority Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>