force-app/main/default/objects/SPEN_PostCodeMDM__c/fields/SPEN_LSOA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LSOA__c</fullName>
    <description>CRMD-5815 : LSOA associated with Post Code</description>
    <label>LSOA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>