force-app/main/default/objects/SPEN_PostCodeMDM__c/fields/SPEN_Outward_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Outward_Code__c</fullName>
    <description>CRMD-9191</description>
    <label>Outward Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>