force-app/main/default/objects/SPEN_PostCodeMDM__c/fields/SPEN_PostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PostCode__c</fullName>
    <description>CRMD-5815 : Stores post code</description>
    <externalId>true</externalId>
    <label>Post Code</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>