force-app/main/default/objects/SPEN_PostCodeMDM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Outward_Code__c</columns>
    <columns>SPEN_PostCode__c</columns>
    <columns>SPEN_LocalAuthority__c</columns>
    <columns>SPEN_LSOA__c</columns>
    <columns>SPEN_Connections_District__c</columns>
    <columns>SPEN_District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>