force-app/main/default/objects/SPEN_PostCodeMDM__c/listViews/SPEN_All_Post_Code_MDM.listView-meta.xml
<ListView>
    <fullName>SPEN_All_Post_Code_MDM</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Outward_Code__c</columns>
    <columns>SPEN_PostCode__c</columns>
    <columns>SPEN_LocalAuthority__c</columns>
    <columns>SPEN_LSOA__c</columns>
    <columns>SPEN_Connections_District__c</columns>
    <columns>SPEN_District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Post Code MDM</label>
</ListView>